# AudioControl

./: .gitignore  CMakeLists.txt  README.md
include/GCSAudioControl/: AudioActions.h  AudioDataCalls.h
resources/: resources.rc
src/: CMakeLists.txt  GCS.AudioActions.cpp  GCS.AudioDataCalls.cpp  GCS.AudioDataCalls.h  GCS.Extras.cpp  GCS.Extras.h  main.cpp
src/GCSAudioControl/: AudioActions.cpp  AudioDataCalls.cpp  CMakeLists.txt  Extras.cpp  main.cpp
